# GestionFondosM

./: .coverage  .env  .env.example  .gitignore  CHANGELOG.md  CHANGELOG_SYNC.md  README.md  buildozer.spec  check_sync_status.py  create_test_user.py  demo_sync.py  pyproject.toml  pytest.ini  requirements.txt  run_app.bat
.github/workflows/: android-build.yml  ci.yml
docs/: SYNC_FIRESTORE.md  SYNC_IMPLEMENTATION.md
src/: main.py
src/gestionfondos_mobile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gf_mobile/: __init__.py  main.py
src/gf_mobile/background/: __init__.py
src/gf_mobile/core/: __init__.py  auth.py  config.py  exceptions.py  http_client.py  session_manager.py  transaction_types.py
src/gf_mobile/persistence/: __init__.py  db.py  models.py
src/gf_mobile/services/: __init__.py  alert_service.py  budget_service.py  categorization_service.py  category_service.py  recurring_service.py  savings_goal_service.py  transaction_service.py
src/gf_mobile/sync/: __init__.py  firestore_client.py  initial_sync.py  merger.py  (+4 more)
tests/: __init__.py  test_alert_merge.py  test_alert_service.py  test_auth.py  test_budget_service.py  test_categorization_service.py  test_category_service.py  test_config_db_path.py  test_firestore_client_queries.py  test_initial_sync_needs_retry.py  test_merger.py  test_persistence.py  test_recurring_service.py  test_savings_goal_service.py  test_sync_outbox.py  test_sync_protocol.py  test_sync_scheduler.py  test_transaction_service.py  test_transaction_types.py  test_ui_gestures.py  test_ui_theme_responsive.py
(+20 files in other folders)
